<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book"
            android:textSize="10pt">
        </TextView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Select Photo"
            android:layout_marginTop="20dp"
            android:background="@color/text_color_default"
            android:id="@+id/btnselectPhoto"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/viewImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_camera"/>

        </LinearLayout>
        <EditText
            android:id="@+id/etTitle"
            android:layout_height="wrap_content"
            android:hint="@string/bookTitle"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/etDescription"
            android:layout_height="wrap_content"
            android:hint="@string/bookDescription"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/etPrice"
            android:layout_height="wrap_content"
            android:hint="@string/bookPrice"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/etAddress"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent">
        </EditText>
        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_height="wrap_content"
            android:prompt="@string/categoryType"
            android:layout_width="fill_parent"
            android:layout_marginTop="20dp"
            android:entries="@array/categoryList">
        </Spinner>
        <Button
            android:id="@+id/btnSellBook"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sellBook"
            android:onClick="sellBook"
            android:background="@color/text_color_default"
            android:layout_width="fill_parent">
        </Button>
    </LinearLayout>
</ScrollView>
